--- a/Codename_Puck/app/src/main/res/layout/camera_view.xml
+++ b/Codename_Puck/app/src/main/res/layout/camera_view.xml
@@ -7,9 +7,8 @@
 
     <FrameLayout
         android:id="@+id/camera_preview"
-        android:layout_width="217dp"
-        android:layout_height="299dp"
-        android:layout_above="@+id/button_capture"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
@@ -21,11 +20,9 @@
     <Button
         android:id="@+id/button_capture"
         android:text="Capture"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"/>
 
 </RelativeLayout>
