--- a/Codename_Puck/app/src/main/res/layout/intro.xml
+++ b/Codename_Puck/app/src/main/res/layout/intro.xml
@@ -21,7 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageView"
-        android:src="@drawable/black_cat_empty"
+        android:src="@drawable/black_cat"
         android:layout_marginTop="6dp"
         android:layout_below="@+id/textView2"
         android:layout_centerHorizontal="true" />
