--- a/Codename_Puck/app/src/main/res/layout/camera_view.xml
+++ b/Codename_Puck/app/src/main/res/layout/camera_view.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
@@ -14,7 +14,6 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
-
     </FrameLayout>
     <ImageView
         android:id="@+id/upper_overlay"
@@ -50,4 +49,4 @@
 
     </RelativeLayout>
 
-</RelativeLayout>
+</LinearLayout>
