Comment page initialized.  Still needs server connection.

--- a/Codename_Puck/app/src/main/res/layout/receive.xml
+++ b/Codename_Puck/app/src/main/res/layout/receive.xml
@@ -8,15 +8,16 @@
     android:columnCount="1">
     <!--android:background="#942CFF"-->
 
-    <ImageView
+    <ImageButton
         android:layout_width="match_parent"
         android:layout_height="170pt"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
         android:layout_marginTop="15dp"
         android:padding="1dp"
-        android:id="@+id/imageView"
-        android:background="#000000"/>
+        android:id="@+id/imageButton"
+        android:background="#000000"
+        android:onClick="commentClick"/>
 
     <LinearLayout
         android:id="@+id/linear_layout"
@@ -24,7 +25,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_below="@+id/imageView">
+        android:layout_below="@+id/imageButton">
 
         <ImageButton
             android:id="@+id/shuck_button"
