--- a/Codename_Puck/app/src/main/res/layout/receive.xml
+++ b/Codename_Puck/app/src/main/res/layout/receive.xml
@@ -42,7 +42,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Puck It"
-            android:onClick="puckClick"/>
+            android:onClick="puckClick"
+            android:background="#942CFF"/>
         </LinearLayout>
 
 
