--- a/Codename_Puck/app/src/main/res/layout/comment_row.xml
+++ b/Codename_Puck/app/src/main/res/layout/comment_row.xml
@@ -12,7 +12,8 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:id="@+id/commentSection">
         <TextView
             android:layout_width="250dp"
             android:layout_height="wrap_content"
