--- a/Codename_Puck/app/src/main/res/layout/history_row.xml
+++ b/Codename_Puck/app/src/main/res/layout/history_row.xml
@@ -4,13 +4,10 @@
     android:layout_height="match_parent"
     android:layout_margin="10dp">
     <TextView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="15dp"
         android:text="Post 1"
+        android:textSize="20dp"
         android:id="@+id/nameText"/>
-    <TextView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:text="Upvote count"
-        android:id="@+id/upCount"/>
 </LinearLayout>
