--- a/Codename_Puck/app/src/main/res/layout/main.xml
+++ b/Codename_Puck/app/src/main/res/layout/main.xml
@@ -36,6 +36,15 @@
         android:layout_below="@+id/button"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:onClick="onCameraClick"/>
-
+        android:onClick="onCameraClick"
+        android:id="@+id/camera"/>
+    <Button
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="History"
+        android:layout_gravity="center_vertical"
+        android:layout_below="@+id/camera"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:onClick="onHistoryClick"/>
 </RelativeLayout>
